--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                     </a></li>
                 <li><a href="#What’s New">What’s New
                     </a></li>
+                <li><a href="#our alumni">Our alumni
+                    </a></li>
                 <li><a href="#Contact us">Contact us
                     </a></li>
             </ul>
@@ -100,6 +102,58 @@
                 </p>
             </li>
         </ul>
+    </section>
+    
+    <section id="our alumni" class="sections">
+    <marquee class="marquee">Our alumni</marquee>
+         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" data-toggle="modal" data-target="#rehman_khan"> <img src="rehman%20khan.jpg" class="img-responsive">
+            <hr>
+            <p class="text-primary">Rehman Khan</p>
+        </div>
+        <div class="modal fade" id="rehman_khan">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header"> <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Rehman Khan</h4>
+                    </div>
+                    <div class="modal-body"> <img src="rehman%20khan.jpg" class="img-responsive img_modal">
+                        <p class="p_modal">rehman khan is an indian writter on indain film industry.<br> <a href="https://en.wikipedia.org/wiki/Rehman_Khan"><b>READ MORE</b></a> </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" data-toggle="modal" data-target="#selena_minz"> <img src="selena%20minz.jpg" class="img-responsive">
+            <hr>
+            <p class="text-primary">Selena Minz</p>
+        </div>
+        <div class="modal fade" id="selena_minz">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header"> <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Selena Minz</h4>
+                    </div>
+                    <div class="modal-body"> <img src="selena%20minz.jpg" class="img-responsive img_modal">
+                        <p class="p_modal">She is an indian billonare biusseness magnate, and the chairmen, managing director of Karl's group.<br> <a href="https://en.wikipedia.org/wiki/Selena_Gomez"><b>READ MORE</b></a> </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" data-toggle="modal" data-target="#piyali"> <img src="piyali.jpg" class="img-responsive">
+            <hr>
+            <p class="text-primary">piyali</p>
+        </div>
+        <div class="modal fade" id="piyali">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header"> <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">piyali</h4>
+                    </div>
+                    <div class="modal-body"> <img src="piyali.jpg" class="img-responsive img_modal">
+                        <p class="p_modal">She is an indian news anchor and auther.<br> <a href="https://celebcenter.net/piyali-munsi/#Piyali_Munsi_Wiki"><b>READ MORE</b></a> </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id="Contact us" class="sections">
